Fix : resolve navbar alignment on desktop and mobile

--- a/application/frontend/src/pages/Search/components/SearchBar.scss
+++ b/application/frontend/src/pages/Search/components/SearchBar.scss
@@ -4,6 +4,7 @@
 
   @media (min-width: 1024px) {
     display: flex;
+    align-items: center;
   }
   .navbar__mobile-menu &,
   .mobile-search-container & {
@@ -13,6 +14,8 @@
 
   form {
     position: relative;
+    display: flex;
+    align-items: center;
   }
 
   .search-icon {
@@ -38,6 +41,8 @@
     box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.02), 0 1px 4px rgba(0, 0, 0, 0.25);
 
     transition: background-color 0.2s ease, border-color 0.2s ease, box-shadow 0.2s ease;
+    line-height: normal;
+    height: 2.25rem;
   }
 
   input:hover {
